--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <nav class="sticky-nav fixed top-0 w-full z-50 bg-white py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <div class="neon-text flex items-center">
-                <span class="text-xl font-bold">ON-US</span>
+                <a href="#hero">
+                <span  class="text-xl font-bold">ON-US</span>
+                </a>
             </div>
             
             <!-- Desktop Menu -->
@@ -87,7 +89,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero-houdini min-h-screen flex items-center pt-20 relative">
+    <section id="hero" class="hero-houdini min-h-screen flex items-center pt-20 relative">
         <div class="container mx-auto px-4 py-20 hero-content">
             <div class="max-w-3xl mx-auto text-center">
                 <h1 class="typing text-4xl md:text-6xl font-bold mb-6">Your Website. On Us.</h1>
