--- a/index.html
+++ b/index.html
@@ -277,14 +277,11 @@
             <table class="comparison-table w-full border-collapse bg-gradient-to-br from-gray-900/50 to-purple-900/20 backdrop-blur-sm rounded-2xl overflow-hidden shadow-2xl border border-purple-400/30">
                 <thead>
                     <tr class="bg-gradient-to-r from-purple-600/20 to-purple-800/20">
-                        <th class="comparison-header text-left p-6 text-purple-300 font-bold text-lg border-b border-purple-400/30">Feature</th>
+                        <th class="comparison-header text-left p-6 text-gray-300 font-bold text-lg border-b border-purple-400/30">Feature</th>
                         <th class="comparison-header text-center p-6 text-gray-300 font-bold text-lg border-b border-purple-400/30 border-l border-purple-400/20">Typical Web Agencies</th>
                         <th class="comparison-header text-center p-6 text-gray-300 font-bold text-lg border-b border-purple-400/30 border-l border-purple-400/20">The Free Website Guys</th>
-                        <th class="comparison-header text-center p-6 text-purple-300 font-bold text-lg border-b border-purple-400/30 border-l border-purple-400/20 relative">
-                            <div class="absolute -top-4 left-1/2 transform -translate-x-1/2 bg-purple-400 text-yellow-400 px-4 py-2 rounded-full font-bold text-sm shadow-lg z-10 whitespace-nowrap">
-                                WIZARD APPROVED
-                            </div>
-                            <div class="pt-4">The Free Website Wizards</div>
+                        <th class="comparison-header text-center p-6 text-white font-bold text-lg border-b border-purple-400/30 border-l border-purple-400/20 relative">
+                            The Free Website Wizards
                         </th>
                     </tr>
                 </thead>
