--- a/index.html
+++ b/index.html
@@ -651,7 +651,8 @@
                 </div>
             </div>
         </div>
-        
+        <!-- Bottom fade overlay -->
+        <div class="absolute bottom-0 left-0 right-0 h-32 bg-gradient-to-t from-black/80 to-transparent pointer-events-none z-10"></div> 
     </section>
     
     <section class="bg-black text-black">
@@ -1235,12 +1236,6 @@
                         <a href="#" class="text-gray-300 hover:text-white transition duration-300 flex items-center">
                             <i class="fab fa-whatsapp mr-3"></i>
                             Whatsapp
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="text-gray-300 hover:text-white transition duration-300 flex items-center">
-                            <i class="fab fa-linkedin mr-3"></i>
-                            LinkedIn
                         </a>
                     </li>
                 </ul>
