--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         <div class="flex items-center justify-center min-h-screen p-4">
             <div id="modalCard" class="bg-gradient-to-br from-purple-900 via-gray-900 to-black rounded-2xl shadow-2xl max-w-md w-full relative transform scale-95 transition-transform duration-300 border border-purple-400/30" style="box-shadow: 0 0 50px rgba(168, 85, 247, 0.3);">
                 <!-- Close Button -->
-                <button id="closeModalBtn" class="absolute top-4 right-4 text-white hover:text-purple-400 transition-colors duration-200 text-2xl z-10 w-8 h-8 flex items-center justify-center rounded-full hover:bg-purple-400/20">
+                <button id="closeModalBtn" onclick="alert('Button clicked!')" class="absolute top-4 right-4 text-white  text-2xl w-8 h-8 flex items-center justify-center rounded-full hover:bg-purple-400/20 ">
                     <i class="fas fa-times"></i>
                 </button>
                 
