--- a/index.html
+++ b/index.html
@@ -1742,7 +1742,7 @@
                     phoneNumber: phoneNumber
                 };
 
-                fetch('/submit', {
+                fetch("https://www.leadneedle.com/submit-wizard", {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
