--- a/index.html
+++ b/index.html
@@ -1744,6 +1744,7 @@
 
                 fetch("https://www.leadneedle.com/submit-wizard", {
                     method: 'POST',
+                    mode: 'cors',
                     headers: {
                         'Content-Type': 'application/json',
                     },
