--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 fade-in slide-in-left">
-                    <img src="Images/assets_task_01jy7f9wqdfrgrvbpd822qj94z_1750450197_img_1.png" alt="Business Website" class="rounded-lg shadow-xl w-full max-w-md mx-auto float transition-all duration-300">
+                    <img src="Images/nerdguy1.png" alt="Business Website" class="rounded-lg shadow-xl w-full max-w-md mx-auto float transition-all duration-300">
                 </div>
                 <div class="md:w-1/2 md:pl-12 fade-in slide-in-right">
                     <h2 class="font-monument text-3xl md:text-4xl mb-6" style="color: #000000;">Why Every Business Deserves a Website</h2>
@@ -477,10 +477,10 @@
 
 <!-- Secret Reveal Section -->
 <section class="relative py-32 overflow-hidden bg-black">
-    <!-- Video Background -->
-    <video autoplay muted loop class="absolute inset-0 w-full h-full object-cover z-0">
-        <source src="Images/bg-video.mp4" type="video/mp4">
-    </video>
+    <!-- Nerd Background Image -->
+    <div class="absolute inset-0 w-full h-full z-0">
+        <img src="Images/nerdguy4.png" alt="Background" class="absolute inset-0 w-full h-full object-cover opacity-20 nerd-background-float">
+    </div>
     
     <!-- Dark Overlay -->
     <div class="absolute inset-0 bg-black bg-opacity-70 z-2"></div>
@@ -603,7 +603,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 md:pl-12 fade-in slide-in-right ">
-                    <img src="Images/assets_task_01jy7f9wqdfrgrvbpd822qj94z_1750450197_img_1.png" alt="Abstract visual design" class="rounded-lg shadow-xl w-full max-w-md mx-auto float">
+                    <img src="Images/nerdguy2.png" alt="Abstract visual design" class="rounded-lg shadow-xl w-full max-w-md mx-auto float">
                 </div>
             </div>
         </div>
@@ -634,7 +634,7 @@
                 <!-- Right Image -->
                 <div class="lg:w-1/2 fade-in slide-in-right">
                     <div class="relative">
-                        <img src="Images/tfwnlogotransparentbackground.png" alt="Professional guidance" class="rounded-lg shadow-2xl w-full max-w-lg mx-auto float">
+                        <img src="Images/nerdguy3.png" alt="Professional guidance" class="rounded-lg shadow-2xl w-full max-w-lg mx-auto float">
                         <!-- Decorative elements -->
                         <div class="absolute -top-4 -right-4 w-8 h-8 bg-gray-400 rounded-full opacity-60 animate-pulse"></div>
             <div class="absolute -bottom-4 -left-4 w-6 h-6 bg-gray-300 rounded-full opacity-40 animate-pulse" style="animation-delay: 0.5s;"></div>
@@ -772,7 +772,7 @@
            <!-- Modal Popup with Google Form -->
     <div id="nerdModal" class="fixed inset-0 bg-black bg-opacity-50 backdrop-blur-sm z-50 hidden opacity-0 transition-opacity duration-300 flex items-center justify-center p-4" style="display: none;">
         <div class="w-full h-full flex items-center justify-center">
-            <div id="modalCard" class="rounded-2xl shadow-2xl w-[90vw] max-w-4xl max-h-[90vh] overflow-hidden relative border border-gray-300 bg-white">
+            <div id="modalCard" class="rounded-2xl shadow-2xl w-[95vw] max-w-5xl h-[95vh] overflow-hidden relative border border-gray-300 bg-white">
                 <!-- Close Button -->
                 <button id="closeModalBtn" class="absolute top-4 right-4 text-gray-600 text-xl w-10 h-10 flex items-center justify-center rounded-full bg-white/80 hover:bg-red-500/80 hover:text-white transition-all duration-200 border border-gray-300 hover:border-red-400 z-20 cursor-pointer shadow-lg">
                     <i class="fas fa-times"></i>
@@ -790,9 +790,9 @@
                     </div>
                     
                     <!-- Google Form Container -->
-                    <div class="flex-grow flex justify-center items-center">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUuafnwtlNEum1ZmB24poicCxyVPLjFAZ8AH3XG9_MgsRPRw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0" class="w-full h-full rounded-lg">Loading…</iframe>
-                    </div>
+                <div class="flex-grow overflow-hidden">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfUuafnwtlNEum1ZmB24poicCxyVPLjFAZ8AH3XG9_MgsRPRw/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" class="w-full h-full rounded-lg">Loading…</iframe>
+                </div>
                 </div>
             </div>
         </div>
